# Brain_tumor_detection

./: README.md  app.py  final_resnet_model.h5  pyproject.toml  requirements.txt
notebooks/: tumor_detection_pipeline.ipynb
