[tool.poetry]
name = "tumor-classifier-app"
version = "0.1.0"
description = "App de Streamlit para clasificar tumores cerebrales con modelo TensorFlow"
authors = ["Alejandro <elprofealejo.info@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.35.0"
tensorflow = "2.16.1"
opencv-python-headless = "^4.9.0.80"
pillow = "^10.3.0"
numpy = "^1.26.4"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
